tests/baselines/reference/jsdocInTypescript2.errors.txt
tests/cases/conformance/jsdoc/jsdocInTypescript2.ts(2,27): error TS1109: Expression expected.


==== tests/cases/conformance/jsdoc/jsdocInTypescript2.ts (1 errors) ====
    // parse error (blocks grammar errors from checker)
    function parse1(n: number=) { }
                              ~
!!! error TS1109: Expression expected.
    